# unified-config

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
src/unified_config/core/: config_manager.py  data_conversion.py  db_access.py  db_operation.py  logger.py  schemas.py
src/unified_config/models/: db_model.py
testbench/: Makefile  alembic.ini  docker-compose.yml  gunicorn.conf.py  requirements.txt
testbench/alembic/: alembic.ini
testbench/alembic/versions/: create_schemas.py
testbench/frontend/: Dockerfile  angular.json  package.json
testbench/frontend/src/: main.ts  styles.scss
testbench/frontend/src/app/: app.component.html  app.component.ts  app.routes.ts
testbench/frontend/src/app/config-edit/: config-edit.component.html  (+3 more)
testbench/src/: config_manager.py  database.py  main.py  task.py
testbench/src/api/: endpoints.py
testbench/src/config/: config.yml
testbench/src/core/: database.py
testbench/src/migrations/: env.py
testbench/src/migrations/versions/: 25d9b5e557ba_initial_migration.py
testbench/src/models/: config.py  function.py
testbench/src/schemas/: schemas.py
testbench/src/services/: config_service.py  function_service.py
tests/integration/: conftest.py  db_setup.py  docker-compose.yml  helpers.py  makefile  test_basic_operations.py  test_bulk_operations.py  test_concurrent_operations.py  test_db_operation.py  test_edge_cases.py  test_export_import.py  test_history_tracking.py  test_initialization.py
tests/unit/data_conversion/: test_data_conversion.py
tests/unit/db_access/: test_db_access.py
tests/unit/db_operation/: test_db_operation.py  test_db_operation_deadlock.py
tests/unit/schemas/: test_schemas.py
(+7 files in other folders)
